<<<<<<< HEAD
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
=======
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>>>>>>> f6359bddc945ca48b6eadf7baf9ed97019f2a954
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
<<<<<<< HEAD
    tools:context="com.example.codealarm.PrepareActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
=======
    tools:context="com.example.partydrawandroid.PrepareActivity" >

    <TextView android:id ="@+id/player_prepare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare" />
    
    <Button android:id="@+id/readyButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ready"
	    android:onClick="startDraw" />
    

</LinearLayout>
>>>>>>> f6359bddc945ca48b6eadf7baf9ed97019f2a954
